# gimp

./: configure.ac
app/: Makefile.am  about.h  app.c  gimpcore.def  sanity.c
app/actions/: Makefile.am  actions.c  colormap-actions.c  colormap-commands.c  context-actions.c  context-commands.c  context-commands.h  dialogs-actions.c  drawable-actions.c  drawable-commands.c  drawable-commands.h  filters-actions.c  image-actions.c  image-commands.c  image-commands.h  layers-actions.c  layers-commands.c  view-actions.c
app/config/: Makefile.am  gimpconfig-dump.c  gimpcoreconfig.c  gimpdialogconfig.c  gimpdialogconfig.h  gimpdisplayconfig.h  gimpgeglconfig.c  gimpguiconfig.c  gimprc-blurbs.h
app/core/: Makefile.am  core-enums.c  core-enums.h  core-types.h  gimp-edit.c  gimp-gui.c  gimp-gui.h  gimp-layer-modes.c  gimpbrush-load.c  gimpbrush.c  gimpbrushclipboard.c  gimpbuffer.c  gimpchannel-select.c  gimpchannel-select.h  gimpchannel.c  gimpcontext.c  gimpdrawable-combine.c  gimpdrawable-fill.c  gimpdrawable-floating-selection.c  gimpdrawable-offset.c  gimpdrawable-preview.c  gimpdrawable-transform.c  gimpdrawable.c  gimpdrawable.h  gimpdrawablefilter.c  gimpdrawablefilter.h  gimpfilloptions.c  gimpgradient.c  gimpgrouplayer.c  gimphistogram.c  gimpimage-color-profile.c  gimpimage-color-profile.h  gimpimage-colormap.c  gimpimage-convert-indexed.c  gimpimage-convert-precision.c  gimpimage-convert-type.c  gimpimage-duplicate.c  gimpimage-merge.c  gimpimage-new.c  gimpimage-pick-color.c  (+27 more)
app/dialogs/: Makefile.am  about-dialog.c  color-profile-dialog.c  color-profile-import-dialog.c  color-profile-import-dialog.h  convert-precision-dialog.c  dialogs-constructors.c  dialogs-constructors.h  dialogs.c  layer-options-dialog.c  layer-options-dialog.h  palette-import-dialog.c  preferences-dialog.c  scale-dialog.c
app/display/: gimpcanvas-style.c  gimpcanvastransformpreview.c  gimpdisplayshell-callbacks.c  gimpdisplayshell-dnd.c  gimpdisplayshell-profile.c  gimpdisplayshell-title.c  gimpdisplayshell-tool-events.c  gimpdisplayshell.c  gimptoolgui.c
app/file/: file-import.c  file-open.c
app/gegl/: gimp-babl-compat.c  gimp-babl.c  gimp-babl.h  gimp-gegl-apply-operation.c  gimp-gegl-apply-operation.h  gimp-gegl-loops.c  gimp-gegl-loops.h  gimp-gegl-nodes.c  gimp-gegl-nodes.h  gimp-gegl-utils.c  gimp-gegl.c  gimpapplicator.c  gimpapplicator.h
app/gui/: gui-vtable.c  splash.c
app/operations/: Makefile.am  gimp-operations.c  gimpcurvesconfig.c  gimphuesaturationconfig.c  gimphuesaturationconfig.h  gimplayermodefunctions.c  (+38 more)
app/xcf/: xcf.c  (+3 more)
docs/: gimprc.5.in
etc/: gimprc  gimprc.in
icons/: icon-list.mk
libgimp/: gimp.c  gimp.def  gimp.h  gimp_pdb_headers.h  gimpcolor_pdb.c  gimpcolor_pdb.h  gimpdrawable.c  gimpdrawable_pdb.c  gimpdrawable_pdb.h  gimpdrawablecolor_pdb.c  gimpdrawablecolor_pdb.h  gimpdrawablepreview.c  gimpenums.h  gimpexport.c  gimpexport.h  gimpimage.c  gimpimage.h  gimpimage_pdb.c  gimpimage_pdb.h  gimpimageconvert_pdb.c  gimpimageconvert_pdb.h  gimpimagemetadata.c  gimplayer_pdb.c  gimppainttools_pdb.c  gimppixelrgn.c  gimptypes.h
libgimpbase/: gimpbaseenums.c  gimpbaseenums.h  gimpcompatenums.c  gimpcompatenums.h
libgimpcolor/: gimpcolor.def  gimpcolor.h  gimpcolorprofile.c  gimpcolorprofile.h  gimpcolortransform.c  gimpcolortransform.h  gimpcolortypes.h  gimppixbuf.c  gimprgb.c  gimprgb.h
libgimpconfig/: gimpcolorconfig.c  gimpscanner.c
libgimpwidgets/: gimpcolorarea.c  gimpcolordisplay.c  gimpcolornotebook.c  gimpcolorprofilestore.c  gimpcolorscale.c  gimpcolorscale.h  gimpcolorscales.c  gimpcolorselect.c  gimpcolorselection.c  gimpcolorselection.h  gimpcolorselector.c  gimpcolorselector.h  gimpicons.c  gimpicons.h  gimppickbutton-default.c  gimppickbutton-quartz.c  gimppreviewarea.c  gimppropwidgets.c  gimpscaleentry.c  gimpwidgetsenums.c  gimpwidgetsenums.h  gimpwidgetsutils.c
menus/: Makefile.am  colormap-menu.xml  dialogs-menuitems.xml  image-menu.xml.in  layers-menu.xml
modules/: Makefile.am  color-selector-cmyk.c  color-selector-water.c  color-selector-wheel.c  display-filter-clip-warning.c  display-filter-gamma.c  display-filter-high-contrast.c  display-filter-lcms.c  display-filter-proof.c  gimpcolorwheel.c
plug-ins/: Makefile.am
plug-ins/common/: Makefile.am  align-layers.c  animation-play.c  border-average.c  color-cube-analyze.c  colorify.c  compose.c  crop-zealous.c  decompose.c  despeckle.c  file-aa.c  file-cel.c  file-compressor.c  file-dicom.c  file-gbr.c  file-gegl.c  file-gif-save.c  file-gih.c  file-header.c  file-html-table.c  file-jp2-load.c  file-mng.c  file-pat.c  file-pcx.c  file-pdf-save.c  file-pix.c  file-png.c  file-pnm.c  file-ps.c  file-psp.c  file-raw-data.c  file-sunras.c  file-tga.c  file-wmf.c  file-xmc.c  file-xpm.c  file-xwd.c  gradient-map.c  grid.c  guillotine.c  (+4 more)
plug-ins/file-bmp/: bmp-load.c  bmp-save.c  bmp.c
plug-ins/file-exr/: file-exr.c  openexr-wrapper.cc
plug-ins/file-faxg3/: faxg3.c
plug-ins/file-fits/: fits.c
plug-ins/file-fli/: fli-gimp.c
plug-ins/file-ico/: ico-dialog.c  ico-save.c
plug-ins/file-jpeg/: jpeg-load.c  jpeg-save.c
plug-ins/file-psd/: Makefile.am  psd-image-res-load.c  psd-load.c  psd-save.c  psd-util.c  psd.c
plug-ins/file-sgi/: sgi.c
plug-ins/file-tiff/: file-tiff-load.c  file-tiff-save.c  file-tiff.c
plug-ins/file-webp/: file-webp-save.c  file-webp.c
plug-ins/fractal-explorer/: fractal-explorer.c
plug-ins/gimpressionist/: gimp.c
plug-ins/ifs-compose/: ifs-compose.c
plug-ins/pagecurl/: pagecurl.c
plug-ins/pygimp/: Makefile.am  gimpenums-types.defs  gimpenumsmodule.c  gimpmodule.c  gimpui.defs  pygimp-drawable.c  pygimp-image.c
plug-ins/pygimp/plug-ins/: Makefile.am  file-openraster.py  py-slice.py
plug-ins/screenshot/: screenshot-x11.c  screenshot.c
plug-ins/script-fu/: scheme-wrapper.c
plug-ins/script-fu/scripts/: Makefile.am  sg-luminosity-masks.scm
plug-ins/selection-to-path/: selection-to-path.c
plug-ins/ui/: plug-in-file-png.ui  plug-in-file-tiff.ui
(+106 files in other folders)
